@@ -308,3 +308,4 @@ ok En general una funcion de "zxvision_pressed_right_mouse_button()" que conside
 -nota: queda tecla libre a la izquierda del 1 para mapear (la UTIL_KEY_COMMON_KEYMAP_BACKSLASH)
 -en i/o ports informacion flags de cada puerto
 -cpm spanish (version superior a 1??) no va
+-extractor dsk creo que a veces lee archivos con cabecera plus3dos. ejemplo : chase hq2. tampoco parece obtener bien siempre los datos (de otro sitio...)
